--- a/0001regression.html
+++ b/0001regression.html
@@ -67,8 +67,14 @@
     </div>-->
 	
 	<ol>
-		<li>Estimate <a class="a-blue">association</a> between <a class="a-red">independent</a> and 
-		<a class="a-red">dependent</a> variable.</li>
+		<li>
+		Estimate <a class="a-blue">association</a> between <a class="a-red">independent</a> 
+		and <a class="a-red">dependent</a> variable.
+		</li>
+		<li>
+		Estimate <a class="a-blue">association</a> between <a class="a-red">independent</a> 
+		and <a class="a-red">dependent</a> variable.
+		</li>
     </ol>
 	
 	<hr>
