--- a/0001regression.html
+++ b/0001regression.html
@@ -68,12 +68,12 @@
 	
 	<ol>
 		<li>
-		Estimate <a class="a-blue">association</a> between <a class="a-red">independent</a> 
-		and <a class="a-red">dependent</a> variable.
+		Estimate <a class="a-black">association</a> between <a class="a-black">independent</a> 
+		and <a class="a-black">dependent</a> variable.
 		</li>
 		<li>
-		Estimate <a class="a-blue">association</a> between <a class="a-red">independent</a> 
-		and <a class="a-red">dependent</a> variable.
+		Estimate <a class="a-black">association</a> between <a class="a-black">independent</a> 
+		and <a class="a-black">dependent</a> variable.
 		</li>
     </ol>
 	
