--- a/0001regression.html
+++ b/0001regression.html
@@ -54,7 +54,6 @@
 	</div>
 	</center>
     
-	<hr>
 	<center>
 	<!--<h3>
 		Muka surat 110
@@ -65,6 +64,10 @@
         <img id="selected-image" src="https://github.com/bazliamin90/img/blob/
 				main/tajwidul/110.jpg?raw=true">
     </div>-->
+	
+	<center>
+	<img src="type_3.png" class="imghr"></img>
+	</center>
 	
 	<ol>
 		<li>
