--- a/0001regression.html
+++ b/0001regression.html
@@ -66,7 +66,7 @@
     </div>-->
 	
 	<center>
-	<img src="type_3.png" class="imghr"></img>
+	<img src="hr pacman.svg" class="imghr"></img>
 	</center>
 	
 	<ol>
