--- a/0001regression.html
+++ b/0001regression.html
@@ -75,8 +75,17 @@
 		and <a class="a-black">dependent</a> variable.
 		</li>
 		<li>
-		Estimate <a class="a-black">association</a> between <a class="a-black">independent</a> 
-		and <a class="a-black">dependent</a> variable.
+		Independent variable <a class="a-black">(iv)</a> must be <a class="a-yel">continuous</a>.
+		</li>
+		<li>
+		Dependent variable <a class="a-black">(dv)</a> can be 
+		<a class="a-yel">continuous</a> or <a class="a-yel">categorical</a>.
+		</li>
+		<li>
+		Continuous iv + continuous dv = <a class="a-black">linear</a> regression.
+		</li>
+		<li>
+		Continuous iv + categorical dv = <a class="a-black">logistic</a> regression.
 		</li>
     </ol>
 	
@@ -103,7 +112,7 @@
 <a href='#' class="stt" title="scroll to top">↑</a>
 
 <!--<a href="#" class="prevar">←</a>-->
-<a href="111.html" class="nexar">></a>
+<a href="#" class="nexar">></a>
 
 </body>
 
