--- a/0001regression.html
+++ b/0001regression.html
@@ -75,23 +75,48 @@
 		and <a class="a-black">dependent</a> variable.
 		</li>
 		<li>
-		Independent variable <a class="a-black">(iv)</a> must be <a class="a-yel">continuous</a>.
+		Independent variable <a class="a-black">(iv)</a> 
+		and dependent variable <a class="a-black">(dv)</a> can 
+		be <a class="a-yel">continuous</a> or <a class="a-yel">categorical</a>.<sup>[1]</sup>
 		</li>
 		<li>
-		Dependent variable <a class="a-black">(dv)</a> can be 
-		<a class="a-yel">continuous</a> or <a class="a-yel">categorical</a>.
+		iv + continuous dv = <a class="a-black">linear</a> regression.
 		</li>
 		<li>
-		Continuous iv + continuous dv = <a class="a-black">linear</a> regression.
+		iv + categorical dv = <a class="a-black">logistic</a> regression.
 		</li>
 		<li>
-		Continuous iv + categorical dv = <a class="a-black">logistic</a> regression.
+		Example:
+		<br><a class="a-black">iv</a>: Cancer, copd , ild
+		<br><a class="a-black">dv</a>: Days of stay at ICU (<a class="a-yel">cont.</a>), 
+		palliative care present or absent (<a class="a-yel">cat.</a>).
+		</li>
+		<li>
+		In the above example, both linear and logistic regression will be used.
 		</li>
     </ol>
+	
+	<center>
+	<img src="hr pacman.svg" class="imghrflip"></img>
+	</center>
+	
+	<center><p>References</p></center>
+	
+	<ol>
+		<li>
+		<a class="isi2" 
+		href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9747134/" 
+		target="_blank">
+		Linear and logistic regression models: when to use and how to interpret them?
+		</a>
+		</li>
+	</ol>
 	
 	<hr>
 	
 
+
+	<!--<ol><li></li></ol>-->
 	<!--<p></p>-->
 	<!--<center><p></p></center>-->
 	<!--<center><i id="arab">teks arab</i></center>-->
