--- a/0001regression.html
+++ b/0001regression.html
@@ -110,6 +110,13 @@
 		Linear and logistic regression models: when to use and how to interpret them?
 		</a>
 		</li>
+		<li>
+		<a class="isi2" 
+		href="https://www.scribbr.com/statistics/statistical-tests/" 
+		target="_blank">
+		Choosing the Right Statistical Test
+		</a>
+		</li>
 	</ol>
 	
 	<hr>
