--- a/0001regression.html
+++ b/0001regression.html
@@ -69,6 +69,8 @@
 	<img src="hr pacman.svg" class="imghr"></img>
 	</center>
 	
+	<center><p>Notes</p></center>
+	
 	<ol>
 		<li>
 		Estimate <a class="a-black">association</a> between <a class="a-black">independent</a> 
