--- a/0001regression.html
+++ b/0001regression.html
@@ -82,7 +82,7 @@
 		be <a class="yel">continuous</a> or <a class="yel">categorical</a> (binary).<sup>[1]</sup>
 		</li>
 		<li>
-		However, majority of references such as <sup>[2]</sup>, state that the 
+		However, other references such as <sup>[2]</sup>, state that the 
 		<a class="blk">iv</a> must 
 		be a <a class="yel">continuous</a> variable.
 		</li>
@@ -130,6 +130,68 @@
 			</tr>
 		</table>
 		</li>
+		<li>
+		Logistic regression: Other examples
+		<table>
+			<tr>
+				<th>iv</th>
+				<th>dv</th>
+			</tr>
+			<tr>
+				<td>
+					✤&nbspAge (<a class="blu">Cont.</a>)
+					<br>✤&nbspBP (<a class="blu">Cont.</a>)
+					<br>✤&nbspCholesterol (<a class="blu">Cont.</a>)
+					<br>✤&nbspGender (<a class="pink">Cat.</a>)
+				</td>
+				<td class="dash">✩&nbspCardiovascular event 
+				(<a class="pink">Cat.</a>), binary</td>
+			</tr>
+		</table>
+		</li>
+		<li>
+		Multinomial logistic regression: <sup>[3]</sup>
+		<br>
+		<br>✩&nbspTo predict <a class="blk">dv</a> with 
+		<a class="yel">more than two</a> categories.
+		<br>
+		<table>
+			<tr>
+				<th>iv</th>
+				<th>dv</th>
+			</tr>
+			<tr>
+				<td>
+					Location in UK (<a class="pink">Cat.</a>)
+					<br>✤&nbspLondon<br>✤&nbspSouth UK<br>✤&nbspNorth UK
+					<br>
+					<br>Age (<a class="blu">Cont.</a>)
+				</td>
+					<td class="dash">
+					Type of drink (<a class="pink">Cat.</a>)
+					<br>✤&nbspCoffee<br>✤&nbspSoft drink<br>✤&nbspTea<br>✤&nbspPlain water
+				</td>
+			</tr>
+			<tr>
+				<td>
+					✤&nbspEmployment duration (<a class="blu">Cont.</a>)
+					<br>✤&nbspMale / female (<a class="pink">Cat.</a>)
+				</td>
+				<td class="dash">
+					Management level(<a class="pink">Cat.</a>)
+					<br>✤&nbspLower
+					<br>✤&nbspMiddle
+					<br>✤&nbspUpper
+				</td>
+			</tr>
+		</table>
+		</li>
+		<li>
+		Multivariate analysis: <sup>[4]</sup>
+		<br>
+		<br>&nbspa) Multiple linear regression
+		<br>&nbspb) Multiple logistic regression
+		</li>
     </ol>
 	
 	<center>
@@ -153,13 +215,27 @@
 		Choosing the Right Statistical Test
 		</a>
 		</li>
+		<li>
+		<a class="isi2" 
+		href="https://statistics.laerd.com/spss-tutorials/multinomial-logistic-regression-using-spss-statistics.php" 
+		target="_blank">
+		Multinomial Logistic Regression using SPSS Statistics
+		</a>
+		</li>
+		<li>
+		<a class="isi2" 
+		href="https://manifold.open.umn.edu/read/chapter-7-steps-for-multivariate-analysis-and-results/section/3c6a9d68-db0d-4df8-ab22-8dfdeaef3a0a" 
+		target="_blank">
+		Steps for Multivariate Analaysis and Results
+		</a>
+		</li>
 	</ol>
 	
 	<hr>
 	
 
 
-	<!--✤ ◈-->
+	<!--✤ ◈ ✩-->
 	<!--<ol><li></li></ol>-->
 	<!--<p></p>-->
 	<!--<center><p></p></center>-->
