--- a/0001regression.html
+++ b/0001regression.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biostats by Bazli</title>
+    <title>Regression</title>
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="style2.css">
 	<link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap" rel="stylesheet">
@@ -12,20 +12,21 @@
 
 <body>
 
-<!--<header-component></header-component>-->
+<!--
+<header-component></header-component>
 
 <div class="header">
 	<ul id="nav">
 		
 		<li>
-		<a href="index.html">🏠︎</a>
+		<a>&nbsp</a>
 		</li>
 
 		<!--<li>
 		<a>|</a>
-		</li>-->	
+		</li>	
 		
-		<!--<div class="dropdown">
+		<div class="dropdown">
         <input type="checkbox" id="dropdown-toggle">
         <label for="dropdown-toggle" class="dropdown-button">Select page ▼</label>
         <div class="dropdown-content">
@@ -33,10 +34,11 @@
 				<li><a href="110.html">110</a></li>
             </ol>
         </div>
-		</div>-->
+		</div>
 		
 	</ul>
 </div>
+-->
 
 <header>
 	<br>
@@ -189,8 +191,29 @@
 		<li>
 		Multivariate analysis: <sup>[4]</sup>
 		<br>
-		<br>&nbspa) Multiple linear regression
-		<br>&nbspb) Multiple logistic regression
+		<br><a class="blu">a) Multiple linear regression</a>
+		<br>
+		<br>&nbsp✩ Predict <a class="blu">cont.</a> dv.
+		
+		<p>
+			Assumptions of <a class="blk">iv</a>:
+			<br>&nbsp✩ All IVs are <a class="blu">cont.<a/>
+			<br>&nbsp✩ Has linear r/ship with dv
+			<br>&nbsp✩ Homoskedasticity
+			<br>&nbsp✩ No autocorrelation
+			<br>&nbsp✩ Normal distribution
+			<br>&nbsp✩ Multicollinearity
+		</p>
+		<p>
+			If iv is <a class="pink">cat.</a>, first convert it to cont.
+			<br>&nbsp✩ Binary cat. iv ⇝ <a class="blu">0, 1</a>
+		</p>
+		<center>❀ ❀ ❀ ❀ ❀</center>
+
+		<br><a class="blu">b) Multiple logistic regression</a>
+		<br>
+		<br>&nbsp✩ Predict binary <a class="pink">cat.</a> dv.
+		
 		</li>
     </ol>
 	
@@ -235,7 +258,7 @@
 	
 
 
-	<!--✤ ◈ ✩-->
+	<!--✤ ◈ ✩ ⇝-->
 	<!--<ol><li></li></ol>-->
 	<!--<p></p>-->
 	<!--<center><p></p></center>-->
@@ -254,10 +277,10 @@
 	
 </main>
 
-<a href='#' class="stt" title="scroll to top">↑</a>
+<a href='#' class="stt">↑</a>
 
 <!--<a href="#" class="prevar">←</a>-->
-<a href="#" class="nexar">></a>
+<a href="index.html" class="nexar">🏠︎</a>
 
 </body>
 
