--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<!--<header-component></header-component>-->
+<!--<header-component></header-component>
 
 	<ul id="nav">
 		
@@ -21,7 +21,7 @@
 		</li>	
 		
 	</ul>
-
+-->
     
 <header>
 	<br>
