--- a/index.html
+++ b/index.html
@@ -5,23 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biostats by Bazli</title>
     <link rel="stylesheet" href="style.css">
-	<link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap" rel="stylesheet">
-    <!--<script src="header.js"></script>-->
 </head>
 
 <body>
 
 <header>
-	<br>
     <h1>Compilation of notes</h1>
 	<h2>:: by Bazli ::</h2>
 	
 	<center>
 	<a href="https://t.me/bazliamin" target="_blank" style="text-decoration: none">
-	<img src="telegram.svg" style="height: 1.6rem;"></img>
+	<img src="telegram.svg" style="height: 1.6rem"></img>
 	</a>
 	<a href="https://www.facebook.com/baz.li.3/" target="_blank">
-		<img src="fb.svg" style="height: 1.6rem;"></img>
+		<img src="fb.svg" style="height: 1.6rem"></img>
 	</a>
 	</center>
 
@@ -39,7 +36,7 @@
 	
 </main>
 
-<a href='#' class="stt" title="scroll to top">↑</a>
+<a href='#' class="stt">↑</a>
 
 </body>
 
