--- a/0001regression.html
+++ b/0001regression.html
@@ -5,68 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regression</title>
     <link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="style2.css">
-	<link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap" rel="stylesheet">
-    <script src="header.js"></script>
 </head>
 
 <body>
 
-<!--
-<header-component></header-component>
-
-<div class="header">
-	<ul id="nav">
-		
-		<li>
-		<a>&nbsp</a>
-		</li>
-
-		<!--<li>
-		<a>|</a>
-		</li>	
-		
-		<div class="dropdown">
-        <input type="checkbox" id="dropdown-toggle">
-        <label for="dropdown-toggle" class="dropdown-button">Select page ▼</label>
-        <div class="dropdown-content">
-            <ol>
-				<li><a href="110.html">110</a></li>
-            </ol>
-        </div>
-		</div>
-		
-	</ul>
-</div>
--->
-
 <header>
-	<br>
     <h1>Linear & logistic regression</h1>
-	<!--<h2>Hukum Isti'adzah</h2>-->
 </header>
 
 <main>
 
-	<center>
-	<div class="centered">
-        <!--<a href="21.html">Previous</a>
-		||-->
-		<!--<a href="111.html" class="a-red">Next</a>-->
-	</div>
-	</center>
-    
-	<center>
-	<!--<h3>
-		Muka surat 110
-	</h3>-->
-	</center>
-    
-    <!--<div id="image-container">
-        <img id="selected-image" src="https://github.com/bazliamin90/img/blob/
-				main/tajwidul/110.jpg?raw=true">
-    </div>-->
-	
 	<center>
 	<img src="hr pacman.svg" class="imghr"></img>
 	</center>
@@ -261,10 +209,6 @@
 		</a>
 		</li>
 	</ol>
-	
-	<hr>
-	
-
 
 	<!--✤ ◈ ✩ ⇝-->
 	<!--<ol><li></li></ol>-->
@@ -272,23 +216,11 @@
 	<!--<center><p></p></center>-->
 	<!--<center><i id="arab">teks arab</i></center>-->
 	<!--<center><i id="arab">❀ ❀ ❀</i></center>-->
-	
-	<!--<hr>-->
-	
-	<center>
-	<div class="centered">
-        <!--<a href="21.html">Previous</a>
-		||-->
-		<!--<a href="111.html" class="a-red">Next</a>-->
-	</div>
-	</center>
-	
+
 </main>
 
 <a href='#' class="stt">↑</a>
-
-<!--<a href="#" class="prevar">←</a>-->
-<a href="index.html" class="nexar">🏠︎</a>
+<a href="index.html" class="home">🏠︎</a>
 
 </body>
 
