--- a/0001regression.html
+++ b/0001regression.html
@@ -14,10 +14,8 @@
 </header>
 
 <main>
-
-	<center>
-	<img src="hr pacman.svg" class="imghr"></img>
-	</center>
+	
+	<center>=====◈◈◈◈◈◈◈◈◈◈=====</center>
 	
 	<center><p>Notes</p></center>
 	
@@ -166,35 +164,33 @@
 		</li>
     </ol>
 	
-	<center>
-	<img src="hr pacman.svg" class="imghrflip"></img>
-	</center>
+	<center>=====◈◈◈◈◈◈◈◈◈◈=====</center>
 	
 	<center><p>References</p></center>
 	
 	<ol>
-		<li>
+		<li class="ref">
 		<a class="isi2" 
 		href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9747134/" 
 		target="_blank">
 		Linear and logistic regression models: when to use and how to interpret them?
 		</a>
 		</li>
-		<li>
+		<li class="ref">
 		<a class="isi2" 
 		href="https://www.scribbr.com/statistics/statistical-tests/" 
 		target="_blank">
 		Choosing the Right Statistical Test
 		</a>
 		</li>
-		<li>
+		<li class="ref">
 		<a class="isi2" 
 		href="https://statistics.laerd.com/spss-tutorials/multinomial-logistic-regression-using-spss-statistics.php" 
 		target="_blank">
 		Multinomial Logistic Regression using SPSS Statistics
 		</a>
 		</li>
-		<li>
+		<li class="ref">
 		<a class="isi2" 
 		href="https://manifold.open.umn.edu/read/chapter-7-steps-for-multivariate-analysis-and-results/section/3c6a9d68-db0d-4df8-ab22-8dfdeaef3a0a" 
 		target="_blank">
