--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
 <main>
     
-	<center>
-	<img src="hr pacman.svg" class="imghrflip"></img>
-	</center>
+	<center>=====◈◈◈◈◈◈◈◈◈◈=====</center>
 
 	<ol>
 		<li><a href="0001regression.html" class="isi">Linear & Logistic regression</a></li>
