--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 <body>
 
 <header>
-    <h1>Compilation of notes</h1>
-	<h2>:: by Bazli ::</h2>
+    <h1 id="logo">Biostatistics notes</h1>
+	<h3 id="logo" style="color: lightgrey">:: by Bazli ::</h3>
 	
-	<center>
+	<div id="logo">
 	<a href="https://t.me/bazliamin" target="_blank" style="text-decoration: none">
 	<img src="telegram.svg" style="height: 1.6rem"></img>
 	</a>
+	&nbsp&nbsp&nbsp
 	<a href="https://www.facebook.com/baz.li.3/" target="_blank">
 		<img src="fb.svg" style="height: 1.6rem"></img>
 	</a>
-	</center>
+	</div>
 
 </header>
     
 	<center>=====◈◈◈◈◈◈◈◈◈◈=====</center>
 
 <ol>
-	<li><a href="0001regression.html" class="isi">Linear & Logistic regression</a></li>
+	<li><a href="0002_standardization.html" class="isi">Standardization</a></li>
 </ol>
 
 <a href='#' class="stt">↑</a>
