--- a/0002_standardization.html
+++ b/0002_standardization.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <h1>Standardization</h1>
 	<hr>
 	
@@ -114,9 +115,9 @@
 			Easy Way To Learn Standardization: Direct And Indirect Methods
 			</a>
 	</ol>
-	
+
 	<a href='#' class="stt">↑</a>
-	<a href="index.html" class="home">menu</a>
+	<a href="index.html" class="home">T o p i c s</a>
 </body>
 
 </html>
