--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <h1 id="logo">Biostatistics notes</h1>
+    <center><h1>Biostatistics</h1></center>
 	<h3 id="logo" style="color: lightgrey">:: by Bazli ::</h3>
 	
 	<div id="logo">
@@ -26,6 +26,7 @@
 </header>
     
 	<center>=====◈◈◈◈◈◈◈◈◈◈=====</center>
+	<center><h3>Topics</h3></center>
 
 <ol>
 	<li><a href="0002_standardization.html" class="isi">Standardization</a></li>
