--- a/0002_standardization.html
+++ b/0002_standardization.html
@@ -11,8 +11,8 @@
 
 <header-component></header-component>
 
-    <h1 id="title">Standardization</h1>
-	
+    <h1 class="title">Standardization</h1>
+
 	<nav>
       <ol>
         <li><a href="#why">Why standardization?</a></li>
@@ -28,26 +28,26 @@
 	<br>
 	<center>=====◈◈◈◈◈◈◈◈◈◈=====</center>
 	
-<a id="why"></a>
 	<ol>
+		<a id="why" class="target"></a>
 		<li>To <a class="c1">compare</a> mortality and morbidity rates in two or more populations.This is important for the evaluation of community health status.
 		
-		<a id="type"></a>
+		<a id="type" class="target"></a>
 		<li>Types of standardization: 
 			<ol class="ol2">
 			<li><a class="c2">direct.</a>
 			<li><a class="c2">indirect.</a>
-<a id="asr"></a>
 			</ol>
 		
+		<a id="asr" class="target"></a>
 		<li>Availability of <a class="c1">age-standardized rates</a> shall determine which standardization method to use.
 			<ul>
 			<li>If age-specific mortality rates (<a class="c1">asmr</a>) for two or more populations are known, 
 			use <a class="c1">direct</a> standardization.
 			<li>If asmr are unknown, use indirect standardization.
-<a id="direct"></a>
 			</ul>
 
+		<a id="direct" class="target"></a>
 		<li><a class="c2">Direct</a> standardization steps:
 			<ol class="ol2">
 			<li>Calculate asmr (each age group, each population).
@@ -61,8 +61,9 @@
 			<li>To get age-adjusted mortality rates, divide total number of expected
 			deaths by the standard population.
 			<li>Compare asmr of the two populations.
-<a id="directe"></a>
 			</ol>
+			
+		<a id="directe" class="target"></a>	
 		<li>Direct standardization, example:
 			<img src="https://github.com/bazliamin90/img/blob/main/bios/0002a.png?raw=true">
 			<ul class="ol2">
@@ -79,8 +80,9 @@
 				<br>B = (1158.99/51,000) x 1000 = 22.7 per 1000 population.
 			<li>Based on age-adjusted rates, risk of death is higher in population A than B.
 			<li>Therefore, relying on crude death rates only is misleading.
-<a id="indirect"></a>
 			</ul>
+			
+		<a id="indirect" class="target"></a>	
 		<li><a class="c1">Indirect</a> standardization steps:	
 			<ol class="ol2">
 			<li>Choose a reference population.
@@ -98,8 +100,9 @@
 				<br>amr = smr x cdr
 			<li>If asmr of the reference population is applied, cdr must be calculated 
 			from that reference population.
-<a id="indirecte"></a>
 			</ol>
+			
+		<a id="indirecte" class="target"></a>	
 		<li>Indirect standardization, example:
 			<ul class="ol2">
 			<li>First, we must know the observed death:
