--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<center><h3>Topics</h3></center>
 
 <ol>
+	<li><a href="0001_regression.html" class="isi">Linear & logistic regression</a></li>
 	<li><a href="0002_standardization.html" class="isi">Standardization</a></li>
 </ol>
 
