--- a/0002_standardization.html
+++ b/0002_standardization.html
@@ -122,7 +122,7 @@
 	</ol>
 	<hr>
 	
-	<h3>Reference</h3>
+	<h3>Reference(s)</h3>
 	<ol>
 		<li class="grey">
 			<a href="https://drive.google.com/file/d/1JV8EihXV1JGeRfiVeTSClJiZF415JHcV/
