--- a/0001_regression.html
+++ b/0001_regression.html
@@ -192,30 +192,29 @@
 	<h3>Reference(s)</h3>
 	
 	<ol>
-		<li class="ref">
-		<a class="isi2" 
-		href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9747134/" 
+		<li class="grey">
+		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9747134/" 
 		target="_blank">
 		Linear and logistic regression models: when to use and how to interpret them?
 		</a>
 		</li>
-		<li class="ref">
-		<a class="isi2" 
-		href="https://www.scribbr.com/statistics/statistical-tests/" 
+		
+		<li class="grey">
+		<a href="https://www.scribbr.com/statistics/statistical-tests/" 
 		target="_blank">
 		Choosing the Right Statistical Test
 		</a>
 		</li>
-		<li class="ref">
-		<a class="isi2" 
-		href="https://statistics.laerd.com/spss-tutorials/multinomial-logistic-regression-using-spss-statistics.php" 
+		
+		<li class="grey">
+		<a href="https://statistics.laerd.com/spss-tutorials/multinomial-logistic-regression-using-spss-statistics.php" 
 		target="_blank">
 		Multinomial Logistic Regression using SPSS Statistics
 		</a>
 		</li>
-		<li class="ref">
-		<a class="isi2" 
-		href="https://manifold.open.umn.edu/read/chapter-7-steps-for-multivariate-analysis-and-results/section/3c6a9d68-db0d-4df8-ab22-8dfdeaef3a0a" 
+		
+		<li class="grey">
+		<a href="https://manifold.open.umn.edu/read/chapter-7-steps-for-multivariate-analysis-and-results/section/3c6a9d68-db0d-4df8-ab22-8dfdeaef3a0a" 
 		target="_blank">
 		Steps for Multivariate Analaysis and Results
 		</a>
