--- a/0001_regression.html
+++ b/0001_regression.html
@@ -14,8 +14,9 @@
 
     <h1 class="title">Linear & logistic regression</h1>
 
+<main>
 	<nav>
-      <ol>
+      <ol class="mainbullet">
         <li><a href="#1">Why regression?</a></li>
 		<li><a href="#2">Choosing type of regression</a></li>
 		<li><a href="#3">Example</a></li>
@@ -28,7 +29,7 @@
 	<br>
 	<center>=====◈◈◈◈◈◈◈◈◈◈=====</center>
 	
-	<ol>
+	<ol class="mainbullet">
 	
 		<a id="1" class="target"></a>
 		<li>
@@ -229,6 +230,7 @@
 	<!--<center><i id="arab">❀ ❀ ❀</i></center>-->
 
 <a href='#' class="stt">↑</a>
+</main>
 
 </body>
 
