--- a/0002_standardization.html
+++ b/0002_standardization.html
@@ -13,8 +13,9 @@
 
     <h1 class="title">Standardization</h1>
 
+<main>
 	<nav>
-      <ol>
+      <ol class="mainbullet">
         <li><a href="#why">Why standardization?</a></li>
 		<li><a href="#type">Types</a></li>
 		<li><a href="#asr">Which methods to choose?</a></li>
@@ -28,7 +29,7 @@
 	<br>
 	<center>=====◈◈◈◈◈◈◈◈◈◈=====</center>
 	
-	<ol>
+	<ol class="mainbullet">
 		<a id="why" class="target"></a>
 		<li>To <a class="c1">compare</a> mortality and morbidity rates in two or more populations.This is important for the evaluation of community health status.
 		
@@ -132,6 +133,8 @@
 	</ol>
 
 	<a href='#' class="stt">↑</a>
+</main>
+	
 </body>
 
 </html>
