--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </center>
 
     <ol id="topicsList" class="mainbullet">
-        <li><a href="0001_regression.html" class="isi">Linear & logistic regression</a></li>
+        <li><a href="0003_effectsize.html" class="isi">Effect size</a></li>
+		<li><a href="0001_regression.html" class="isi">Linear & logistic regression</a></li>
         <li><a href="0002_standardization.html" class="isi">Standardization</a></li>
         <!-- Add more topics here -->
     </ol>
