--- a/0001_regression.html
+++ b/0001_regression.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regression</title>
     <link rel="stylesheet" href="style.css">
-	<script src="header.js"></script>
+	<script src="nav.js"></script>
 </head>
 
 <body>
