--- a/index.html
+++ b/index.html
@@ -1,66 +1,32 @@
-<!doctype html>
-<html lang="en-GB">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biostats by Bazli</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Biostats by Bazli</title>
+  <link rel="stylesheet" href="bodystyle.css">
+  <script src="nav.js"></script>
 </head>
-
 <body>
+<div class="topbar">
+    <header-component></header-component>
+    <a href="index.html" class="header">Biostats by Bazli</a>
+</div>
+<div id="panduan">
+  <center><h4>Homepage</h4></center>
+  <p>
+    Salam alaikum
 
-<main>
-<header>
-    <center><h1>Biostatistics</h1></center>
-	
-	<div id="logo">
-	<a href="https://t.me/bazliamin" target="_blank" style="text-decoration: none">
-	<img src="telegram.svg" style="height: 1.6rem"></img>
-	</a>
-	&nbsp&nbsp&nbsp
-	<a href="https://www.facebook.com/baz.li.3/" target="_blank">
-		<img src="fb.svg" style="height: 1.6rem"></img>
-	</a>
-	</div>
-</header>
-    
-    <center>=====◈◈◈◈◈◈◈◈◈◈=====</center>
-    <center><h3>Topics</h3></center>
+If you're visiting this page, you're likely here because you're searching for a random sentence. Sometimes a random word just isn't enough, and that is where the random sentence generator comes into play. By inputting the desired number, you can make a list of as many random sentences as you want or need. Producing random sentences can be helpful in a number of different ways.
 
-    <!-- Search input -->
-    <center>
-        <input type="text" id="searchBox" placeholder="Search topics..." onkeyup="filterTopics()" style="margin-bottom: 20px; padding: 5px; width: 80%;">
-    </center>
+For writers, a random sentence can help them get their creative juices flowing. Since the topic of the sentence is completely unknown, it forces the writer to be creative when the sentence appears. There are a number of different ways a writer can use the random sentence for creativity. The most common way to use the sentence is to begin a story. Another option is to include it somewhere in the story. A much more difficult challenge is to use it to end a story. In any of these cases, it forces the writer to think creatively since they have no idea what sentence will appear from the tool.
 
-    <ol id="topicsList" class="mainbullet">
-        <li><a href="0003_effectsize.html" class="isi">Effect size</a></li>
-		<li><a href="0001_regression.html" class="isi">Linear & logistic regression</a></li>
-        <li><a href="0002_standardization.html" class="isi">Standardization</a></li>
-        <!-- Add more topics here -->
-    </ol>
+For those writers who have writers' block, this can be an excellent way to take a step to crumbling those walls. By taking the writer away from the subject matter that is causing the block, a random sentence may allow them to see the project they're working on in a different light and perspective. Sometimes all it takes is to get that first sentence down to help break the block.
 
-    <a href='#' class="stt">↑</a>
-</main>
-
-<!-- JavaScript to filter topics -->
-<script>
-function filterTopics() {
-    var input, filter, list, topics, i, txtValue;
-    input = document.getElementById('searchBox');
-    filter = input.value.toLowerCase();
-    list = document.getElementById("topicsList");
-    topics = list.getElementsByTagName('li');
-
-    for (i = 0; i < topics.length; i++) {
-        txtValue = topics[i].textContent || topics[i].innerText;
-        if (txtValue.toLowerCase().indexOf(filter) > -1) {
-            topics[i].style.display = "";
-        } else {
-            topics[i].style.display = "none";
-        }
-    }
-}
-</script>
-
+Random sentences can also spur creativity in other types of projects being done. If you are trying to come up with a new concept, a new idea or a new product, a random sentence may help you find unique qualities you may not have considered. Trying to incorporate the sentence into your project can help you look at it in different and unexpected ways than you would normally on your own. 
+</p>
+</div>
+  <a href="#" class="stt" title="Scroll to top" aria-label="Scroll to top">▲</a>
+  <br><br><br>
 </body>
 </html>
